Fixed gradient on firefox

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1232,9 +1232,12 @@ img {
   height: 3rem;
   z-index: 999999;
   margin-top: -3rem;
-  background: -webkit-gradient(linear, left bottom, left top, from(white), to(transparent));
-  background: -webkit-linear-gradient(bottom, white, transparent);
-  background: linear-gradient(to top, white, transparent);
+  background: rgba(255, 255, 255, 0);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, white));
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, white 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(white));
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, white 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ffffff', GradientType=0 );
 }
 .work__info.is-active .work__info--button {
   display: block;
